--- a/DReporting.Web/DReporting.Web.csproj
+++ b/DReporting.Web/DReporting.Web.csproj
@@ -181,13 +181,7 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
-    <Compile Include="Areas\Reporting\Views\Shared\Designer.ascx.cs">
-      <DependentUpon>Designer.ascx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Areas\Reporting\Views\Shared\Designer.ascx.designer.cs">
-      <DependentUpon>Designer.ascx</DependentUpon>
-    </Compile>
+    <Compile Include="Reporting\Datas\XtraReport1DataSource.cs" />
     <Compile Include="WebForm1.aspx.cs">
       <DependentUpon>WebForm1.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -195,10 +189,10 @@
     <Compile Include="WebForm1.aspx.designer.cs">
       <DependentUpon>WebForm1.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Reports\XtraReport1.cs">
+    <Compile Include="Reporting\Reports\XtraReport1.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Reports\XtraReport1.Designer.cs">
+    <Compile Include="Reporting\Reports\XtraReport1.Designer.cs">
       <DependentUpon>XtraReport1.cs</DependentUpon>
     </Compile>
     <Compile Include="Controllers\AccountController.cs" />
@@ -219,7 +213,6 @@
     <Content Include="Areas\Reporting\Scripts\jquery-1.11.1.min.js" />
     <Content Include="Areas\Reporting\Scripts\jquery-ui.min.js" />
     <Content Include="Areas\Reporting\Scripts\knockout-3.3.0.js" />
-    <Content Include="Areas\Reporting\Views\Shared\Designer.ascx" />
     <Content Include="WebForm1.aspx" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -233,10 +226,12 @@
     <Content Include="Areas\Reporting\Views\Web.config" />
     <Content Include="Areas\Reporting\Views\Shared\BaseLayout.cshtml" />
     <Content Include="Areas\Reporting\Views\Home\Index.cshtml" />
-    <Content Include="Areas\Reporting\Views\Viewer\Index.cshtml" />
+    <Content Include="Areas\Reporting\Views\Preview\Index.cshtml" />
     <Content Include="Areas\Reporting\Views\_ViewStart.cshtml" />
-    <Content Include="Areas\Reporting\Views\Designer\Index.cshtml" />
+    <Content Include="Areas\Reporting\Views\Design\Index.cshtml" />
     <Content Include="Areas\Reporting\Views\Shared\Viewer.cshtml" />
+    <Content Include="Areas\Reporting\Views\Shared\Designer.cshtml" />
+    <Content Include="Areas\Reporting\Views\Design\Create.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -294,7 +289,7 @@
     <None Include="Project_Readme.html" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Reports\XtraReport1.resx">
+    <EmbeddedResource Include="Reporting\Reports\XtraReport1.resx">
       <DependentUpon>XtraReport1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
