--- a/DReporting.Web/Areas/Reporting/Views/Web.config
+++ b/DReporting.Web/Areas/Reporting/Views/Web.config
@@ -17,7 +17,10 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.Optimization" />
+        
         <add namespace="DReporting" />
+        <add namespace="DReporting.Models" />
+        
         <add namespace="DReporting.Web" />
         <add namespace="DevExpress.Web.Mvc" />
         <add namespace="DevExpress.Web.Mvc.UI" />
