--- a/DReporting/DReporting.csproj
+++ b/DReporting/DReporting.csproj
@@ -110,8 +110,12 @@
     <Compile Include="Core\IDataSource.cs" />
     <Compile Include="Core\IReportStorage.cs" />
     <Compile Include="Models\DataSourceModel.cs" />
+    <Compile Include="Models\DataSourceVM.cs" />
     <Compile Include="Models\HomeVM.cs" />
+    <Compile Include="Models\CategoryVM.cs" />
     <Compile Include="Models\ReportModel.cs" />
+    <Compile Include="Models\CategoryModel.cs" />
+    <Compile Include="Models\ReportVM.cs" />
     <Compile Include="Services\InjectContainer.cs" />
     <Compile Include="Core\IReportDatas.cs" />
     <Compile Include="Services\DefaultReportDatas.cs" />
@@ -124,12 +128,12 @@
     <Compile Include="Services\DefaultXtraReport.Designer.cs">
       <DependentUpon>DefaultXtraReport.cs</DependentUpon>
     </Compile>
-    <Compile Include="Web\Area\ControllerBase.cs" />
-    <Compile Include="Web\Area\WebResources.cs" />
-    <Compile Include="Web\Area\AreaRegistration.cs" />
-    <Compile Include="Web\Area\Controllers\DesignController.cs" />
-    <Compile Include="Web\Area\Controllers\HomeController.cs" />
-    <Compile Include="Web\Area\Controllers\PreviewController.cs" />
+    <Compile Include="Web\Mvc\ControllerBase.cs" />
+    <Compile Include="Web\Mvc\WebResources.cs" />
+    <Compile Include="Web\Mvc\AreaRegistration.cs" />
+    <Compile Include="Web\Mvc\Controllers\DesignController.cs" />
+    <Compile Include="Web\Mvc\Controllers\HomeController.cs" />
+    <Compile Include="Web\Mvc\Controllers\PreviewController.cs" />
     <Compile Include="Models\DesignerVM.cs" />
     <Compile Include="Models\ViewerVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
