--- a/DReporting.Web/DReporting.Web.csproj
+++ b/DReporting.Web/DReporting.Web.csproj
@@ -192,6 +192,18 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReportDatas\Categories.cs">
+      <DependentUpon>Categories.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="ReportDatas\Categories.designer.cs">
+      <DependentUpon>Categories.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ReportDatas\Categories1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Categories.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="ReportDatas\CategoryDataSource.cs" />
     <Compile Include="ReportDatas\UserDataSource.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -226,6 +238,17 @@
     <Content Include="Areas\Reporting\Views\Home\CreateCategory.cshtml" />
     <Content Include="Areas\Reporting\Views\Home\EditCategory.cshtml" />
     <Content Include="Areas\Reporting\Views\Shared\Category.cshtml" />
+    <Content Include="ReportDatas\Categories.xsc">
+      <DependentUpon>Categories.xsd</DependentUpon>
+    </Content>
+    <None Include="ReportDatas\Categories.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Categories1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <Content Include="ReportDatas\Categories.xss">
+      <DependentUpon>Categories.xsd</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
