new code struct of DReporting project

--- a/DReporting.Web/Areas/Reporting/Views/Web.config
+++ b/DReporting.Web/Areas/Reporting/Views/Web.config
@@ -20,6 +20,7 @@
         
         <add namespace="DReporting" />
         <add namespace="DReporting.Models" />
+        <add namespace="DReporting.Web.Mvc.ViewModels" />
         
         <add namespace="DReporting.Web" />
         <add namespace="DevExpress.Web.Mvc" />
