--- a/DReporting.Web/Web.config
+++ b/DReporting.Web/Web.config
@@ -15,6 +15,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
+    <add name="iPro" connectionString="Data Source=localhost;Initial Catalog=Demo;Integrated Security=True" />
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-DReporting-20150620093619.mdf;Initial Catalog=aspnet-DReporting-20150620093619;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="xpf.printing" connectionString="xpoprovider=MSSqlServer;data source=(localdb)\mssqllocaldb;attachdbfilename=|DataDirectory|\ReportService.mdf;integrated security=True;connect timeout=120" />
   </connectionStrings>
