object data source

--- a/DReporting.Web/DReporting.Web.csproj
+++ b/DReporting.Web/DReporting.Web.csproj
@@ -205,6 +205,7 @@
       <DependentUpon>Categories.xsd</DependentUpon>
     </Compile>
     <Compile Include="ReportDatas\DataSetDataProvider.cs" />
+    <Compile Include="ReportDatas\ObjectDataProvider.cs" />
     <Compile Include="ReportDatas\SampleDataProvider.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
