--- a/DReporting/DReporting.csproj
+++ b/DReporting/DReporting.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Core\ICategoryMgr.cs" />
     <Compile Include="Core\IReportStorage.cs" />
     <Compile Include="Core\ITemplateMgr.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="ReportingContext.cs" />
     <Compile Include="Core\IDataProvider.cs" />
     <Compile Include="Models\DataProviderModel.cs" />
