--- a/DReporting.Web/DReporting.Web.csproj
+++ b/DReporting.Web/DReporting.Web.csproj
@@ -185,22 +185,15 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReportDatas\Categories.cs">
-      <DependentUpon>Categories.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="ReportDatas\Categories.designer.cs">
-      <DependentUpon>Categories.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ReportDatas\Categories1.Designer.cs">
+    <Compile Include="ReportDatas\DataSet1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Categories.xsd</DependentUpon>
+      <DependentUpon>DataSet1.xsd</DependentUpon>
     </Compile>
-    <Compile Include="ReportDatas\DataSetDataProvider.cs" />
-    <Compile Include="ReportDatas\ObjectDataProvider.cs" />
-    <Compile Include="ReportDatas\SampleDataProvider.cs" />
-    <Compile Include="ReportDatas\TypeListDataProvider.cs" />
-    <Compile Include="ReportDatas\XmlDataProvider.cs" />
+    <Compile Include="ReportDatas\DataSetProvider.cs" />
+    <Compile Include="ReportDatas\ObjectProvider.cs" />
+    <Compile Include="ReportDatas\SampleProvider.cs" />
+    <Compile Include="ReportDatas\TypeListProvider.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -237,17 +230,17 @@
     <Content Include="Areas\Reporting\Views\Home\CreateCategory.cshtml" />
     <Content Include="Areas\Reporting\Views\Home\EditCategory.cshtml" />
     <Content Include="Areas\Reporting\Views\Shared\Category.cshtml" />
-    <Content Include="ReportDatas\Categories.xsc">
-      <DependentUpon>Categories.xsd</DependentUpon>
-    </Content>
     <Content Include="Areas\Reporting\Views\Home\EditDataProvider.cshtml" />
-    <None Include="ReportDatas\Categories.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>Categories1.Designer.cs</LastGenOutput>
+    <Content Include="ReportDatas\DataSet1.xsc">
+      <DependentUpon>DataSet1.xsd</DependentUpon>
+    </Content>
+    <None Include="ReportDatas\DataSet1.xsd">
       <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DataSet1.Designer.cs</LastGenOutput>
     </None>
-    <Content Include="ReportDatas\Categories.xss">
-      <DependentUpon>Categories.xsd</DependentUpon>
+    <Content Include="ReportDatas\DataSet1.xss">
+      <DependentUpon>DataSet1.xsd</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
