--- a/DReporting.Web/Web.config
+++ b/DReporting.Web/Web.config
@@ -31,6 +31,7 @@
       <assemblies>
         <add assembly="DevExpress.Data.v15.1, Version=15.1.3.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A" />
         <add assembly="DevExpress.DataAccess.v15.1, Version=15.1.3.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A" />
+        <add assembly="DevExpress.DataAccess.v15.1.UI, Version=15.1.3.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A" />
         <add assembly="DevExpress.Printing.v15.1.Core, Version=15.1.3.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A" />
         <add assembly="DevExpress.Utils.v15.1, Version=15.1.3.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A" />
         <add assembly="DevExpress.Web.Mvc5.v15.1, Version=15.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
