--- a/DReporting.Web/App_Data/DReporting/Templates/4bba8777-cae7-4105-a7b2-70ce79593613/settings.json
+++ b/DReporting.Web/App_Data/DReporting/Templates/4bba8777-cae7-4105-a7b2-70ce79593613/settings.json
@@ -4,5 +4,5 @@
   "Code": null,
   "CategoryID": null,
   "CreationTimeUtc": "2015-07-08T05:29:00.5334139Z",
-  "LastUpdateTime": null
+  "LastUpdateTime": "2015-07-09T14:44:09.8903163Z"
 }
