upgrade report designer

--- a/DReporting.Web/Areas/Reporting/Views/Web.config
+++ b/DReporting.Web/Areas/Reporting/Views/Web.config
@@ -22,7 +22,9 @@
         <add namespace="DReporting.Models" />
         <add namespace="DReporting.Web" />
         <add namespace="DReporting.Web.Mvc.ViewModels" />
-       
+
+        <add namespace="DevExpress.Utils" />
+        <add namespace="DevExpress.Web" />
         <add namespace="DevExpress.Web.Mvc" />
         <add namespace="DevExpress.Web.Mvc.UI" />
       </namespaces>
