--- a/DReporting.Web/Web.config
+++ b/DReporting.Web/Web.config
@@ -43,6 +43,7 @@
         <add assembly="DevExpress.XtraReports.v15.1.Extensions, Version=15.1.4.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A" />
         <add assembly="DevExpress.XtraReports.v15.1.Service, Version=15.1.4.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A" />
         <add assembly="DevExpress.RichEdit.v15.1.Core, Version=15.1.4.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A" />
+        <add assembly="DevExpress.XtraGauges.v15.1.Core, Version=15.1.4.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A" />
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5" />
